# oxc_ex

./: .credo.exs  .gitignore  AGENTS.md  CHANGELOG.md  README.md  checksum-Elixir.OXC.Format.Native.exs  checksum-Elixir.OXC.Lint.Native.exs  checksum-Elixir.OXC.Native.exs  mix.exs
.github/workflows/: release.yml
lib/: oxc.ex  oxc_ex.ex
lib/oxc/: format.ex  lint.ex  native.ex
lib/oxc/format/: native.ex
lib/oxc/lint/: native.ex  rule.ex
lib/oxc_ex/: native.ex
native/oxc_ex_nif/: Cargo.toml  README.md
native/oxc_ex_nif/src/: bundle.rs  codegen.rs  error.rs  imports.rs  lib.rs  options.rs  parse.rs
native/oxc_fmt_nif/: Cargo.toml
native/oxc_fmt_nif/src/: lib.rs
native/oxc_lint_nif/: Cargo.toml
native/oxc_lint_nif/src/: lib.rs
test/: bundle_test.exs  codegen_test.exs  format_test.exs  oxc_ex_test.exs  oxc_lint_test.exs  oxc_test.exs
