[package]
name = "oxc_ex_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxc_ex_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37", default-features = false, features = ["derive", "nif_version_2_15", "serde"] }
oxc_allocator = "0.129"
oxc_ast = { version = "0.129", features = ["serialize"] }
oxc_ast_visit = "0.129"
oxc_codegen = { version = "0.129", features = ["sourcemap"] }
oxc_diagnostics = "0.129"
oxc_minifier = "0.129"
oxc_parser = "0.129"
oxc_semantic = "0.129"
oxc_sourcemap = "6.1"
oxc_span = "0.129"
oxc_str = "0.129"
oxc_syntax = "0.129"
oxc_transformer = "0.129"
oxc_transformer_plugins = "0.129"
oxc95 = { package = "oxc", version = "=0.95.0" }
oxc_resolver = "=11.10.0"
rolldown = "=0.1.0"
rolldown_common = "=0.1.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "time"] }
