[package]
name = "oxc_fmt_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "oxc_fmt_nif"
crate-type = ["cdylib"]

[workspace]

[dependencies]
rustler = { version = "0.37", default-features = false, features = ["derive", "nif_version_2_15"] }
oxc_formatter = { git = "https://github.com/oxc-project/oxc", tag = "crates_v0.129.0" }
oxc_allocator = { git = "https://github.com/oxc-project/oxc", tag = "crates_v0.129.0" }
oxc_parser = { git = "https://github.com/oxc-project/oxc", tag = "crates_v0.129.0" }
oxc_span = { git = "https://github.com/oxc-project/oxc", tag = "crates_v0.129.0" }
